--- a/.env.test
+++ b/.env.test
@@ -4481,3 +4481,53 @@ DAY_7_INPUT="224636607: 220 4 6 366 10
 1587691: 16 74 42 6 1 7 80 4
 57824354: 7 227 986 57 8 7
 4216: 2 1 2 17 93 519"
+DAY_8_INPUT="...............................s..................
+..................s..............q.............p..
+.....a............................................
+........c......Y.......Q..........................
+............................................4.....
+........Y.........y............m..........4.......
+......................Y...s..........S............
+.........................................S........
+...............N.............y....................
+...........a.......y..................1...........
+................................................S.
+...c........k.............q....t............S.....
+.............................qM...................
+........a.........................................
+..................................................
+..................................................
+..c..........k...Q..q....P........................
+5.................Q...................8...........
+......yc..........................................
+........................E............4............
+.........6........................u..p.....4......
+.........5.............P..n......1.........N......
+6..............................1.........J.t......
+..6..................................3.u..t.....p.
+....5...k..........................u..............
+.......................E..................u....x..
+..................E.................x.............
+...k..................P.............3.............
+...........0.....9.5...........E.........31e....N.
+......0.................................N.........
+.................CU.....................t....x....
+......7....................e......................
+....0..........K......C...........................
+.....6....j......M............................J...
+......K.................................p.........
+.....9........................U...................
+............................3....n................
+.............K.........2.....C..................x.
+....................P........UJ...................
+.....0......X...C.........T..............U........
+.......M.....8j....7.............2........Q.......
+9...............K.................................
+....e.....8.........................2.A.m.........
+..e......8.........s...n..........................
+.....................................T..nm........
+...................X............2.........m......A
+......................X..j....................T...
+.........7..M......j.............T................
+....9...7....................................A....
+..........................................A......."
